--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "local": "vite --mode dev",
+    "remote": "vite --mode staging",
+    "build": "vite build",
     "preview": "vite preview",
     "test.e2e": "cypress run",
     "test.unit": "vitest",
@@ -23,6 +24,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.2",
     "ionicons": "^7.0.0",
+    "node-scp": "^0.0.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
