--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-hook-form": "^7.49.2",
     "react-query": "^3.39.3",
     "react-router": "^5.3.4",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "sftp-upload": "^1.0.4"
   },
   "devDependencies": {
     "@capacitor/cli": "5.6.0",
