--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "@ionic/react-router": "^7.0.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "ag-grid-react": "^31.0.1",
     "axios": "^1.6.2",
     "date-fns": "^3.0.6",
     "ionicons": "^7.0.0",
     "node-scp": "^0.0.23",
     "react": "^18.2.0",
-    "react-data-grid": "^7.0.0-beta.41",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-query": "^3.39.3",
